--- a/droom/package.json
+++ b/droom/package.json
@@ -7,7 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.3.1",
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.8.0",
     "mdbreact": "^4.14.0",
