--- a/droom/package.json
+++ b/droom/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "bootstrap": "4.3.1",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "mdbootstrap": "^4.8.0",
     "mdbreact": "^4.14.0",
     "moment": "^2.24.0",
